--- a/prep/bd/hab/v2020/corals_data_prep.Rmd
+++ b/prep/bd/hab/v2020/corals_data_prep.Rmd
@@ -4,15 +4,15 @@ author: "*Compiled on `r date()` by `r Sys.info()['user']`*"
 output: 
   html_document:
     toc: true
-    number_sections: true
+    number_depth: 3 
+    toc_float: yes
+    number_sections: false
     theme: cerulean
     highlight: haddock
     includes: 
-     #in_header: '../../../workflow/templates/ohi_hdr.html' - need to update this
+     in_header: '../../../src/templates/ohi_hdr.html' 
   pdf_document:
     toc: true
-editor_options: 
-  chunk_output_type: console
 ---
 
 # Summary
@@ -21,9 +21,9 @@ This script uses benthic habitat mapping shapefiles to calculate the percent liv
 
 # Data 
 
-Coral cover maps were downloaded from the National Centers for Coastal Ocean Science (NCCOS) benthic habitat mapping project for Palmyra Atoll, found [here](https://products.coastalscience.noaa.gov/collections/benthic/e58palmyra/#horizontalTab3)   
+Coral cover maps were downloaded from the National Centers for Coastal Ocean Science (NCCOS) benthic habitat mapping project for Palmyra Atoll, found [here.](https://products.coastalscience.noaa.gov/collections/benthic/e58palmyra/#horizontalTab3)   
 
-Data was downloaded on June 30, 2020, and habitat maps were completed in December 2011.  
+Habitat maps were completed in December 2011 and data were downloaded on June 30, 2020.  
 
 Citation: U.S. Department of Commerce, National Oceanic and Atmospheric Administration, National Center for Coastal Ocean Sciences. (2011). Palmyra Habitat Maps [Data file]. Retrieved from https://products.coastalscience.noaa.gov/collections/benthic/e58palmyra/
 
@@ -43,6 +43,7 @@ source(here('src/R/common.R'))
 
 dir_goal   <- '~/github/pal-prep/prep/bd/hab/v2020'
 dir_anx    <- file.path(dir_M, 'git-annex/foursite/palmyra')
+dir_scores <- '~/github/pal-scores/region'
 ```
 
 # Methods
@@ -66,7 +67,7 @@ Using these groupings, the total number of observations in each zone are:
 
  - Back Reef: 126   
  - Fore Reef: 156  
- - Lagoon: 146   
+ - Lagoon:    146   
  
 ```{r coral-maps, eval=F}
 
@@ -153,9 +154,5 @@ write_csv(coral_status, file.path(dir_goal, "output/coral_status.csv"))
 ## Save to Toolbox 
 
 ```{r save-to-toolbox, eval=F}
-
-# Save to toolbox
-dir_scores <- '~/github/pal-scores/region'
-
 write_csv(coral_status, file.path(dir_scores, 'layers/hab_coral_status.csv'))
 ```
