--- a/prep/bd/hab/v2020/rainforest_trend.Rmd
+++ b/prep/bd/hab/v2020/rainforest_trend.Rmd
@@ -4,20 +4,20 @@ author: "*Compiled on `r date()` by `r Sys.info()['user']`*"
 output: 
   html_document:
     toc: true
-    number_sections: true
+    number_depth: 3 
+    toc_float: yes
+    number_sections: false
     theme: cerulean
     highlight: haddock
     includes: 
-     #in_header: '../../../workflow/templates/ohi_hdr.html' - need to update this
+     in_header: '../../../src/templates/ohi_hdr.html' 
   pdf_document:
     toc: true
-editor_options: 
-  chunk_output_type: console
 ---
 
 # Summary 
 
-This script calculates the trend in rainforest area in 2001, 2010, and 2016 relative to the 2001 potential rainforest area.   
+This script calculates the trend in rainforest area from 2001 to 2016 relative to the 2001 potential rainforest area.   
 
 # Data 
 
@@ -52,6 +52,7 @@ source(here('src/R/common.R'))
 
 dir_goal   <- '~/github/pal-prep/prep/bd/hab/v2020'
 dir_anx    <- file.path(dir_M, 'git-annex/foursite/palmyra')
+dir_scores <- '~/github/pal-scores/region'
 ```
 
 
@@ -280,8 +281,5 @@ rainforest_trend <- data.frame(
 ## Save to Toolbox
 
 ```{r save-to-toolbox, eval=F}
-# save to toolbox
-dir_scores <- '~/github/pal-scores/region'
-
 write_csv(rainforest_trend, file.path(dir_scores, 'layers/hab_rainforest_trend.csv'))
 ```
