--- a/prep/hs/cp/v2020/coastal_protection_trend.Rmd
+++ b/prep/hs/cp/v2020/coastal_protection_trend.Rmd
@@ -4,20 +4,20 @@ author: "*Compiled on `r date()` by `r Sys.info()['user']`*"
 output: 
   html_document:
     toc: true
-    number_sections: true
+    number_depth: 3 
+    toc_float: yes
+    number_sections: false
     theme: cerulean
     highlight: haddock
     includes: 
-     #in_header: '../../../workflow/templates/ohi_hdr.html' - need to update this
+     in_header: '../../../src/templates/ohi_hdr.html' 
   pdf_document:
     toc: true
-editor_options: 
-  chunk_output_type: console
 ---
 
 # Summary 
 
-This script calculates the trend in coastal protection, which is based on the trend in the condition of coral reef habitats.        
+This script calculates the trend in coastal protection based on the trend in the condition of coral reef habitats.        
 
 # Data 
 
@@ -27,23 +27,10 @@ The coastal protection trend will use the same data as the coral condition trend
 
 Coral condition is lacking historic data for all areas of the reef used to estimate current status (fore reef, back reef, and lagoon). Therefore, the trend of coral condition will be estimated using the OHI global data. The OHI global trend data is calculated as a linear trend in coral condition, calculated on a per country basis across all available data from 1975-2006. More information on the coral trend method can be found in the [OHI Global Methods](https://raw.githack.com/OHI-Science/ohi-global/published/documents/methods/Supplement.html#62_biodiversity) documentation, Section 6.2.1. 
 
-# Setup 
-
-```{r setup, message = F, warning = F}
-knitr::opts_chunk$set(echo = FALSE)
-
-library(tidyverse)
-library(here)
-
-# Source and set file paths
-source(here('src/R/common.R'))
-
-dir_goal   <- '~/github/pal-prep/prep/hs/cp/v2020' 
-dir_hab    <- '~/github/pal-prep/prep/bd/hab/v2020'
-```
-
 # Methods 
 
 ## Coastal Protection Trend 
 
 Coral reefs are the only habitat included in the coastal protection goal. Therefore, the coastal protection trend is just the coral condition trend, which was calculated for the Biodiversity Habitats subgoal in `coral_trend.Rmd` and saved to the pal-scores toolbox as `hab_coral_trend.csv`.    
+
+
