--- a/prep/hs/cs/v2020/carbon_storage_data_prep.Rmd
+++ b/prep/hs/cs/v2020/carbon_storage_data_prep.Rmd
@@ -4,20 +4,20 @@ author: "*Compiled on `r date()` by `r Sys.info()['user']`*"
 output: 
   html_document:
     toc: true
-    number_sections: true
+    number_depth: 3 
+    toc_float: yes
+    number_sections: false
     theme: cerulean
     highlight: haddock
     includes: 
-     #in_header: '../../../workflow/templates/ohi_hdr.html' - need to update this
+     in_header: '../../../src/templates/ohi_hdr.html' 
   pdf_document:
     toc: true
-editor_options: 
-  chunk_output_type: console
 ---
 
 # Summary
 
-This script classifies tree species into native and nonnative groups and finds the percent of total area occupied by native tree species. The carbon storage status is based on the percent of land occupied by native tree species compared to the reference point percentage of land occupied by native tree species.   
+This script classifies tree species into native and nonnative groups and finds the percent of total area occupied by native tree species. The carbon storage status is based on the percent of land occupied by native tree species.      
 
 # Data 
 
@@ -25,7 +25,7 @@ This script classifies tree species into native and nonnative groups and finds t
 
 Tree cover maps were downloaded from the U.S. Geological Survey vegetation community mapping project for Palmyra Atoll, found [here](https://www.sciencebase.gov/catalog/item/5c66fc5be4b0fe48cb3aca49).    
 
-Data was downloaded on July 7, 2020, and vegetation maps were completed in October 2016 and published in June 2019. 
+Vegetation maps were completed in October 2016 and published in June 2019. Data were downloaded on July 7, 2020.    
 
 Citation: Struckhoff, M.A., 2019, Woody species crown and vegetation community data, Palmyra Atoll, 2016: U.S. Geological Survey data release, https://doi.org/10.5066/P9GMPVIO.  
 
@@ -45,6 +45,7 @@ source(here('src/R/common.R'))
 
 dir_goal   <- '~/github/pal-prep/prep/hs/cs/v2020'
 dir_anx    <- file.path(dir_M, 'git-annex/foursite/palmyra')
+dir_scores <- '~/github/pal-scores/region'
 ```
 
 
@@ -166,7 +167,7 @@ write_sf(tree_area, file.path(dir_goal, "int/tree_area.shp"), driver = "ESRI Sha
 
 ## Calculate Status
  
-Reference Point: 95% of the forest area dominated by native trees   
+*Reference Point:* 95% of the forest area dominated by native trees   
 
 
 The status is calculated as the current percent of forest dominated by native trees over the reference point percentage   
@@ -207,10 +208,6 @@ write_csv(cs_status, file.path(dir_goal, "output/cs_status.csv"))
 ## Save to Toolbox 
 
 ```{r save-to-toolbox, eval=F}
-
-# Save to toolbox
-dir_scores <- '~/github/pal-scores/region'
-
 write_csv(cs_status, file.path(dir_scores, 'layers/hs_carbon_storage_status.csv'))
 ```
  
